Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21676

Target of transition lost in SCXML editor when zooming to state

    XMLWordPrintable

Details

    • Linux/X11, Windows
    • 2b2cacfc09d72a4663b69932c156b46d989367d5 (qt-creator/qt-creator/master)

    Description

      For the state machine in the attached files, if you zoom to state Outer, the transition fron Inner to Other gets corrupted (the target state is lost).

      When zooming out again, the state machine looks OK with the arrow ends in the correct place, but no transition will take place, as the transition has no target.

      Attaching a video too.

      Attachments

        1. image-2019-06-30-10-42-30-829.png
          image-2019-06-30-10-42-30-829.png
          89 kB
        2. qtbug72302_video.mp4
          9.72 MB
        3. qtbug72302.scxml
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jkobus Jarek Kobus
            shmittal Shveta Mittal
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes